feat: add available diagnostics
